--- a/angular.json
+++ b/angular.json
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "arena-stats:build"
+            "buildTarget": "arena-stats:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "arena-stats:build:production"
+              "buildTarget": "arena-stats:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "arena-stats:build"
+            "buildTarget": "arena-stats:build"
           }
         },
         "test": {
@@ -104,19 +104,6 @@
             "scripts": []
           }
         },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        },
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
@@ -131,6 +118,5 @@
         }
       }
     }
-  },
-  "defaultProject": "arena-stats"
+  }
 }
