--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.0.4",
-    "@angular/common": "^12.0.4",
-    "@angular/compiler": "^12.0.4",
-    "@angular/core": "^12.0.4",
-    "@angular/forms": "^12.0.4",
-    "@angular/platform-browser": "^12.0.4",
-    "@angular/platform-browser-dynamic": "^12.0.4",
-    "@angular/router": "^12.0.4",
-    "bootstrap": "^4.5.0",
-    "bootswatch": "^4.5.0",
-    "ngx-bootstrap": "^5.6.1",
-    "rxjs": "~6.6.7",
-    "serialize-javascript": "^3.1.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "17.3.0",
+    "@angular/common": "17.3.0",
+    "@angular/compiler": "17.3.0",
+    "@angular/core": "17.3.0",
+    "@angular/forms": "17.3.0",
+    "@angular/platform-browser": "17.3.0",
+    "@angular/platform-browser-dynamic": "17.3.0",
+    "@angular/router": "17.3.0",
+    "bootstrap": "5.3.3",
+    "bootswatch": "5.3.3",
+    "ngx-bootstrap": "12.0.0",
+    "rxjs": "6.6.7",
+    "serialize-javascript": "3.1.0",
+    "tslib": "2.0.0",
+    "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.0.4",
-    "@angular/cli": "^12.0.4",
-    "@angular/compiler-cli": "^12.0.4",
-    "@angular/language-service": "^12.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.2.4"
+    "@angular-devkit/build-angular": "17.3.0",
+    "@angular/cli": "17.3.0",
+    "@angular/compiler-cli": "17.3.0",
+    "@angular/language-service": "17.3.0",
+    "@types/jasmine": "3.6.0",
+    "@types/jasminewd2": "2.0.3",
+    "@types/node": "12.11.1",
+    "codelyzer": "6.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "6.3.16",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "protractor": "7.0.0",
+    "ts-node": "7.0.0",
+    "tslint": "6.1.0",
+    "typescript": "5.4.2"
   }
 }
