--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "ngx-bootstrap": "12.0.0",
+    "ngx-select-ex": "^8.0.2",
     "rxjs": "6.6.7",
     "serialize-javascript": "3.1.0",
     "tslib": "2.0.0",
