--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "17.3.0",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
+    "lodash.isequal": "4.5.0",
     "ngx-bootstrap": "12.0.0",
     "ngx-select-ex": "^8.0.2",
     "rxjs": "6.6.7",
