--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "17.3.0",
     "@angular/platform-browser-dynamic": "17.3.0",
     "@angular/router": "17.3.0",
+    "@fortawesome/fontawesome-free": "6.7.1",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "lodash.isequal": "4.5.0",
