--- a/package.json
+++ b/package.json
@@ -11,30 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.0",
-    "@angular/common": "17.3.0",
-    "@angular/compiler": "17.3.0",
-    "@angular/core": "17.3.0",
-    "@angular/forms": "17.3.0",
-    "@angular/platform-browser": "17.3.0",
-    "@angular/platform-browser-dynamic": "17.3.0",
-    "@angular/router": "17.3.0",
+    "@angular/animations": "19.2.5",
+    "@angular/common": "19.2.5",
+    "@angular/compiler": "19.2.5",
+    "@angular/core": "19.2.5",
+    "@angular/forms": "19.2.5",
+    "@angular/platform-browser": "19.2.5",
+    "@angular/platform-browser-dynamic": "19.2.5",
+    "@angular/router": "19.2.5",
     "@fortawesome/fontawesome-free": "6.7.1",
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "lodash.isequal": "4.5.0",
-    "ngx-bootstrap": "12.0.0",
+    "ngx-bootstrap": "^19.0.2",
     "ngx-select-ex": "^8.0.2",
     "rxjs": "6.6.7",
     "serialize-javascript": "3.1.0",
     "tslib": "2.0.0",
-    "zone.js": "0.14.4"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.0",
-    "@angular/cli": "17.3.0",
-    "@angular/compiler-cli": "17.3.0",
-    "@angular/language-service": "17.3.0",
+    "@angular-devkit/build-angular": "19.2.6",
+    "@angular/cli": "19.2.6",
+    "@angular/compiler-cli": "19.2.5",
+    "@angular/language-service": "19.2.5",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "12.11.1",
@@ -49,6 +49,6 @@
     "protractor": "7.0.0",
     "ts-node": "7.0.0",
     "tslint": "6.1.0",
-    "typescript": "5.4.2"
+    "typescript": "5.8.3"
   }
 }
