--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@angular/language-service": "19.2.5",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
-    "@types/node": "12.11.1",
+    "@types/node": "^22.14.0",
     "codelyzer": "6.0.0",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.0",
